[package]
name = "tower-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["async-read-body"] }
bytes = "1.5.0"
futures = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
http = "0.2.9"
http-body = "0.4.5"
hyper = "0.14.27"
pin-project-lite = "0.2.13"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tokio-test = "0.4.3"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "request-id"] }
tracing = "0.1.37"

